[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "harmonia"
version = "2.16.1"
description = ""
authors = ["Chris Latham <cl@bink.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" },
    { include = "harness" },
    { include = "settings.py" },
    { include = "rq_worker_settings.py" },
]

[[tool.poetry.source]]
name = "bink-pypi"
url = "https://pypi.tools.uksouth.bink.sh/simple"

[tool.poetry.scripts]
tximport = "app.imports.cli:cli"
txexport = "app.exports.cli:cli"
txcore = "app.core.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.40"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
click = "^8.1.3"
redis = "^4.3.4"
APScheduler = "^3.9.1"
humanize = "^4.3.0"
apispec = "^5.2.2"
marshmallow = "^3.17.0"
pendulum = "^2.1.2"
apispec-webframeworks = "^0.5.2"
rq = "^1.11.0"
pycryptodome = "^3.15.0"
azure-storage-blob = "^12.13.1"
marshmallow-sqlalchemy = "^0.28.1"
sentry-sdk = {extras = ["flask"], version = "^1.9.5"}
paramiko = "^2.11.0"
kombu = "^5.2.4"
hashids = "^1.3.1"
PGPy = "^0.5.4"
psycopg2-binary = "^2.9.3"
prometheus-client = "^0.14.1"
gunicorn = "^20.1.0"
user-token-store = "^1.1.4"
azure-oidc = "^1.0.0"
soteria = "^1.5.2"
harmonia-fixtures = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mypy = "^0.971"
responses = "^0.21.0"
flake8 = "^5.0.4"
black = "^22.6.0"
toml = "^0.10.2"
ipython = "^8.4.0"
isort = {extras = ["pipfile"], version = "^5.10.1"}
xenon = "^0.9.0"
mimesis = "^6.0.0"
factory-boy = "^3.2.1"
prettyprinter = "^0.18.0"
time-machine = "^2.8.2"
fakeredis = "^2.3.0"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
